# goff

./: .rustfmt.toml  Cargo.toml  Readme.md
examples/: ripgrep-cargo-toml.gf
src/: error.rs  lib.rs  serialize.rs
